<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_page_logo"
        android:layout_width="105dp"
        android:layout_height="29dp"
        android:layout_gravity="start"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>