...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewBlockUnblockPass"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/tvExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="1"
                    android:gravity="left"
...
