...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSendSMSPhone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:digits="1234567890+- "
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="18"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonGetPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/oval_button"
        android:text="@string/get_pass"
        android:textColor="@color/cardview_light_background"
...
