...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterPassSms"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="text"
            android:maxLength="18"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonEnterSms"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/oval_button"
...
